--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,24 @@
 /* Estilos CSS para el formulario */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
+    background-image: url("../img/medical-banner-with-doctor-holding-stethoscope.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    min-height: 100vh;
     color: #333;
     margin: 0;
     padding: 0;
+
 }
 
 header,
 footer {
-    background-color: #449bec;
+    background-color: #65d8b2;
     color: #fff;
-    padding: 20px;
+    padding: 10px;
 }
 
 footer {
@@ -19,6 +26,12 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+.pie-principal {
+    position: relative;
+    bottom: 0;
+}
+
 
 footer p {
     text-align: center;
@@ -46,6 +59,12 @@ li {
     margin: auto;
 }
 
+.container-bottom {
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 label {
     display: block;
     margin-bottom: 5px;
@@ -67,7 +86,7 @@ select {
 
 input[type="submit"],
 input[type="button"] {
-    background-color: #70bfec;
+    background-color: #5fc5c5;
     color: white;
     border: none;
     border-radius: 4px;
@@ -89,19 +108,21 @@ span {
 /* Estilos CSS para las tablas */
 table {
     border-collapse: collapse;
-    width: 100%;
+    width: 85%;
     font-size: 16px;
     font-family: sans-serif;
     margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 5px 5px 40px;
 }
 
 th,
 td {
     padding: 10px;
     text-align: center;
-    border: 3px solid #000000;
+    border: 2px solid #000000;
     background-color: #ffffff;
-
 
 }
 
@@ -110,7 +131,7 @@ td {
 }
 
 th {
-    background-color: #cecece;
+    background-color: #c0dde2;
     font-weight: bold;
 }
 
@@ -119,11 +140,15 @@ th {
 }
 
 .listado-container {
-    max-width: 70%;
+    max-width: 75%;
+
+
+
 }
 
 .boton-container {
     margin-block: 30px;
+
 }
 
 a {
